--- a/instagramclone/style.css
+++ b/instagramclone/style.css
@@ -1,4 +1,3 @@
-
 ::placeholder{
   text-align: center;
   font-size: 14px;
@@ -12,7 +11,7 @@ input.empty {
     font-style: normal;
     font-weight: normal;
     text-decoration: inherit;
-    background-color: #ebebeb;
+    background-color: #FAFAFA;
 }
 
 .postuserfont {
